modules/parsers/parser-xshttpdest/com.sap.xsk.parser.xshttpdest/src/main/java/com/sap/xsk/parser/xshttpdest/core/XshttpdestParser.java
/*
 * Copyright (c) 2019-2021 SAP SE or an SAP affiliate company and XSK contributors
 *
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Apache License, v2.0
 * which accompanies this distribution, and is available at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * SPDX-FileCopyrightText: 2019-2021 SAP SE or an SAP affiliate company and XSK contributors
 * SPDX-License-Identifier: Apache-2.0
 */
// Generated from /Users/C5322976/Desktop/Workspace/Dirigible/xsk/modules/parsers/parser-xshttpdest/com.sap.xsk.parser.xshttpdest/src/main/antlr4/Xshttpdest.g4 by ANTLR 4.9.1
package com.sap.xsk.parser.xshttpdest.core;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XshttpdestParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, STRING=34, INT=35, BOOL=36, EQ=37, SC=38, WS=39, LINE_COMMENT=40;
	public static final int
		RULE_xshttpdest = 0, RULE_property = 1, RULE_host = 2, RULE_port = 3, 
		RULE_description = 4, RULE_useSSL = 5, RULE_sslAuth = 6, RULE_sslHostCheck = 7, 
		RULE_pathPrefix = 8, RULE_authType = 9, RULE_samlProvider = 10, RULE_samlACS = 11, 
		RULE_samlAttributes = 12, RULE_samlNameId = 13, RULE_proxyType = 14, RULE_proxyHost = 15, 
		RULE_proxyPort = 16, RULE_timeout = 17, RULE_remoteSID = 18, RULE_remoteClient = 19, 
		RULE_oAuthAppConfigPackage = 20, RULE_oAuthAppConfig = 21, RULE_sslAuthValue = 22, 
		RULE_samlNameIdList = 23, RULE_authTypeValue = 24, RULE_proxyTypeValue = 25, 
		RULE_unsignedInt = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"xshttpdest", "property", "host", "port", "description", "useSSL", "sslAuth", 
			"sslHostCheck", "pathPrefix", "authType", "samlProvider", "samlACS", 
			"samlAttributes", "samlNameId", "proxyType", "proxyHost", "proxyPort", 
			"timeout", "remoteSID", "remoteClient", "oAuthAppConfigPackage", "oAuthAppConfig", 
			"sslAuthValue", "samlNameIdList", "authTypeValue", "proxyTypeValue", 
			"unsignedInt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'host'", "'port'", "'description'", "'useSSL'", "'sslAuth'", "'sslHostCheck'", 
			"'pathPrefix'", "'authType'", "'samlProvider'", "'samlACS'", "'samlAttributes'", 
			"'samlNameId'", "'proxyType'", "'proxyHost'", "'proxyPort'", "'timeout'", 
			"'remoteSID'", "'remoteClient'", "'oAuthAppConfigPackage'", "'oAuthAppConfig'", 
			"'client'", "'anonymous'", "'['", "','", "']'", "'none'", "'basic'", 
			"'AssertionTicket'", "'SamlAssertion'", "'SamlAssertionPropagation'", 
			"'http'", "'socks'", "'-'", null, null, null, "'='", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "STRING", 
			"INT", "BOOL", "EQ", "SC", "WS", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Xshttpdest.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XshttpdestParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class XshttpdestContext extends ParserRuleContext {
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public XshttpdestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xshttpdest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterXshttpdest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitXshttpdest(this);
		}
	}

	public final XshttpdestContext xshttpdest() throws RecognitionException {
		XshttpdestContext _localctx = new XshttpdestContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_xshttpdest);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(54);
				property();
				}
				}
				setState(57); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public HostContext host() {
			return getRuleContext(HostContext.class,0);
		}
		public PortContext port() {
			return getRuleContext(PortContext.class,0);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public UseSSLContext useSSL() {
			return getRuleContext(UseSSLContext.class,0);
		}
		public SslAuthContext sslAuth() {
			return getRuleContext(SslAuthContext.class,0);
		}
		public SslHostCheckContext sslHostCheck() {
			return getRuleContext(SslHostCheckContext.class,0);
		}
		public PathPrefixContext pathPrefix() {
			return getRuleContext(PathPrefixContext.class,0);
		}
		public AuthTypeContext authType() {
			return getRuleContext(AuthTypeContext.class,0);
		}
		public SamlProviderContext samlProvider() {
			return getRuleContext(SamlProviderContext.class,0);
		}
		public SamlACSContext samlACS() {
			return getRuleContext(SamlACSContext.class,0);
		}
		public SamlAttributesContext samlAttributes() {
			return getRuleContext(SamlAttributesContext.class,0);
		}
		public SamlNameIdContext samlNameId() {
			return getRuleContext(SamlNameIdContext.class,0);
		}
		public ProxyTypeContext proxyType() {
			return getRuleContext(ProxyTypeContext.class,0);
		}
		public ProxyHostContext proxyHost() {
			return getRuleContext(ProxyHostContext.class,0);
		}
		public ProxyPortContext proxyPort() {
			return getRuleContext(ProxyPortContext.class,0);
		}
		public TimeoutContext timeout() {
			return getRuleContext(TimeoutContext.class,0);
		}
		public RemoteSIDContext remoteSID() {
			return getRuleContext(RemoteSIDContext.class,0);
		}
		public RemoteClientContext remoteClient() {
			return getRuleContext(RemoteClientContext.class,0);
		}
		public OAuthAppConfigPackageContext oAuthAppConfigPackage() {
			return getRuleContext(OAuthAppConfigPackageContext.class,0);
		}
		public OAuthAppConfigContext oAuthAppConfig() {
			return getRuleContext(OAuthAppConfigContext.class,0);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitProperty(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_property);
		try {
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(59);
				host();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				port();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 3);
				{
				setState(61);
				description();
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				useSSL();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 5);
				{
				setState(63);
				sslAuth();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 6);
				{
				setState(64);
				sslHostCheck();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 7);
				{
				setState(65);
				pathPrefix();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 8);
				{
				setState(66);
				authType();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 9);
				{
				setState(67);
				samlProvider();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 10);
				{
				setState(68);
				samlACS();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 11);
				{
				setState(69);
				samlAttributes();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 12);
				{
				setState(70);
				samlNameId();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 13);
				{
				setState(71);
				proxyType();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 14);
				{
				setState(72);
				proxyHost();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 15);
				{
				setState(73);
				proxyPort();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 16);
				{
				setState(74);
				timeout();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 17);
				{
				setState(75);
				remoteSID();
				}
				break;
			case T__17:
				enterOuterAlt(_localctx, 18);
				{
				setState(76);
				remoteClient();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 19);
				{
				setState(77);
				oAuthAppConfigPackage();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 20);
				{
				setState(78);
				oAuthAppConfig();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HostContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(XshttpdestParser.STRING, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public HostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_host; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterHost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitHost(this);
		}
	}

	public final HostContext host() throws RecognitionException {
		HostContext _localctx = new HostContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_host);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__0);
			setState(82);
			match(EQ);
			setState(83);
			match(STRING);
			setState(84);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PortContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode INT() { return getToken(XshttpdestParser.INT, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public PortContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_port; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterPort(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitPort(this);
		}
	}

	public final PortContext port() throws RecognitionException {
		PortContext _localctx = new PortContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_port);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(T__1);
			setState(87);
			match(EQ);
			setState(88);
			match(INT);
			setState(89);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(XshttpdestParser.STRING, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitDescription(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__2);
			setState(92);
			match(EQ);
			setState(93);
			match(STRING);
			setState(94);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseSSLContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode BOOL() { return getToken(XshttpdestParser.BOOL, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public UseSSLContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useSSL; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterUseSSL(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitUseSSL(this);
		}
	}

	public final UseSSLContext useSSL() throws RecognitionException {
		UseSSLContext _localctx = new UseSSLContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_useSSL);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__3);
			setState(97);
			match(EQ);
			setState(98);
			match(BOOL);
			setState(99);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SslAuthContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public SslAuthValueContext sslAuthValue() {
			return getRuleContext(SslAuthValueContext.class,0);
		}
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public SslAuthContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sslAuth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterSslAuth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitSslAuth(this);
		}
	}

	public final SslAuthContext sslAuth() throws RecognitionException {
		SslAuthContext _localctx = new SslAuthContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sslAuth);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(T__4);
			setState(102);
			match(EQ);
			setState(103);
			sslAuthValue();
			setState(104);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SslHostCheckContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode BOOL() { return getToken(XshttpdestParser.BOOL, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public SslHostCheckContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sslHostCheck; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterSslHostCheck(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitSslHostCheck(this);
		}
	}

	public final SslHostCheckContext sslHostCheck() throws RecognitionException {
		SslHostCheckContext _localctx = new SslHostCheckContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sslHostCheck);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(T__5);
			setState(107);
			match(EQ);
			setState(108);
			match(BOOL);
			setState(109);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathPrefixContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(XshttpdestParser.STRING, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public PathPrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pathPrefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterPathPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitPathPrefix(this);
		}
	}

	public final PathPrefixContext pathPrefix() throws RecognitionException {
		PathPrefixContext _localctx = new PathPrefixContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pathPrefix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__6);
			setState(112);
			match(EQ);
			setState(113);
			match(STRING);
			setState(114);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuthTypeContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public AuthTypeValueContext authTypeValue() {
			return getRuleContext(AuthTypeValueContext.class,0);
		}
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public AuthTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_authType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterAuthType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitAuthType(this);
		}
	}

	public final AuthTypeContext authType() throws RecognitionException {
		AuthTypeContext _localctx = new AuthTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_authType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(T__7);
			setState(117);
			match(EQ);
			setState(118);
			authTypeValue();
			setState(119);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SamlProviderContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(XshttpdestParser.STRING, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public SamlProviderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_samlProvider; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterSamlProvider(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitSamlProvider(this);
		}
	}

	public final SamlProviderContext samlProvider() throws RecognitionException {
		SamlProviderContext _localctx = new SamlProviderContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_samlProvider);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(T__8);
			setState(122);
			match(EQ);
			setState(123);
			match(STRING);
			setState(124);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SamlACSContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(XshttpdestParser.STRING, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public SamlACSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_samlACS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterSamlACS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitSamlACS(this);
		}
	}

	public final SamlACSContext samlACS() throws RecognitionException {
		SamlACSContext _localctx = new SamlACSContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_samlACS);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__9);
			setState(127);
			match(EQ);
			setState(128);
			match(STRING);
			setState(129);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SamlAttributesContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public TerminalNode STRING() { return getToken(XshttpdestParser.STRING, 0); }
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public SamlAttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_samlAttributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterSamlAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitSamlAttributes(this);
		}
	}

	public final SamlAttributesContext samlAttributes() throws RecognitionException {
		SamlAttributesContext _localctx = new SamlAttributesContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_samlAttributes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(T__10);
			setState(132);
			match(EQ);
			setState(133);
			match(STRING);
			setState(134);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SamlNameIdContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public SamlNameIdListContext samlNameIdList() {
			return getRuleContext(SamlNameIdListContext.class,0);
		}
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public SamlNameIdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_samlNameId; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterSamlNameId(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitSamlNameId(this);
		}
	}

	public final SamlNameIdContext samlNameId() throws RecognitionException {
		SamlNameIdContext _localctx = new SamlNameIdContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_samlNameId);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(T__11);
			setState(137);
			match(EQ);
			setState(138);
			samlNameIdList();
			setState(139);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProxyTypeContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(XshttpdestParser.EQ, 0); }
		public ProxyTypeValueContext proxyTypeValue() {
			return getRuleContext(ProxyTypeValueContext.class,0);
		}
		public TerminalNode SC() { return getToken(XshttpdestParser.SC, 0); }
		public ProxyTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_proxyType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).enterProxyType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof XshttpdestListener ) ((XshttpdestListener)listener).exitProxyType(this);
		}
	}
